Tu mensaje de cambio

--- a/proyecto-xm/.env
+++ b/proyecto-xm/.env
@@ -1,11 +1,11 @@
 # PostgreSQL
-POSTGRES_USER=administrador
-POSTGRES_PASSWORD=4329
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin123
 POSTGRES_DB=energadb
 
 
 # Cadena de conexión (para SQLAlchemy / FastAPI)
-DATABASE_URL=postgresql://tu_usuario:tu_contraseña@db:5432/energadb
+DATABASE_URL=postgresql://admin:admin123@localhost:5432/energadb
 
 # API XM
 XM_API_KEY=tu_api_key
@@ -13,5 +13,5 @@ XM_BASE_URL=https://servapibi.xm.com.co/monthly
 
 
 # FastAPI
-FASTAPI_HOST=0.0.0.0
+FASTAPI_HOST=127.0.0.1
 FASTAPI_PORT=8000
